--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ body {
     color: #2E2F42;
     font-size: 16px;
     position: relative;
+    max-width: 1440px;
 
 }
 
@@ -84,7 +85,7 @@ img {
 }
 
 .logo {
-    
+
     color: #2E2F42;
 }
 
@@ -140,7 +141,7 @@ img {
 
 .adress {
     margin-left: auto;
-    
+
 }
 
 .header-adress {
@@ -157,7 +158,12 @@ img {
 .hero-section {
     background-color: #2E2F42;
     padding: 188px 0;
-    min-width: 1440px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+            rgba(46, 47, 66, 0.7)),
+        url(../images/people-office.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background;
 }
 
 .hero-title {
@@ -168,7 +174,7 @@ img {
     letter-spacing: 0.02em;
     color: #FFFFFF;
     padding-bottom: 48px;
-    margin: 0 auto ;
+    margin: 0 auto;
     text-align: center;
 }
 
@@ -186,6 +192,7 @@ img {
     text-decoration: none;
     padding: 16px 32px;
 }
+
 .hero-button {
     background-color: #4D5AE5;
     border-color: #4D5AE5;
@@ -208,6 +215,7 @@ img {
 .section-about {
     padding: 120px 0;
 }
+
 .visually-hidden {
     position: absolute;
     height: 1px;
@@ -278,7 +286,7 @@ img {
 
 .worck-item {
     width: calc((100% - 48px) / 3);
-    
+
 }
 
 /* -----------Team section-------------- */
@@ -307,7 +315,7 @@ img {
     color: var(--main-title-color);
     /* margin: 32px 0 8px; */
     padding-bottom: 8px;
-    margin:  0 auto;
+    margin: 0 auto;
 }
 
 .team-subtitle {
@@ -316,7 +324,7 @@ img {
     /* padding: 0px 0px 32px;
     margin: auto; */
     margin: 0 auto;
-    
+
 }
 
 .team-list {
@@ -334,7 +342,7 @@ img {
 .card-item {
     padding: 32px 16px 32px 16px;
     text-align: center;
-    
+
 }
 
 /* -----------Footer section------------ */
@@ -410,7 +418,7 @@ img {
     gap: 24px;
     justify-content: center;
     margin-bottom: 72px;
-   
+
 }
 
 .hero-section2 {
