--- a/css/styles.css
+++ b/css/styles.css
@@ -125,6 +125,7 @@ img {
 .header {
     border-bottom: 1px solid #E7E9FC;
     min-width: 1440px;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-block {
@@ -202,6 +203,7 @@ img {
     margin: 0 auto;
     display: block;
     border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 
@@ -209,6 +211,7 @@ img {
 .hero-button:focus {
     background-color: var(--main-buttons-focuse-color);
     border-color: var(--main-buttons-focuse-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 /* -------------Section about----------- */
@@ -351,6 +354,7 @@ img {
     width: calc((100% - 72px) / 4);
     background: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .card-item {
@@ -391,15 +395,6 @@ img {
 
 /* customers */
 
-.customers-list {
-    width: 168px;
-    height: 88px;
-    border: 1px;
-    border-color: #8E8F99;
-
-}
-
-
 .customers-section {
     padding-top: 130px;
     padding-bottom: 120px;
@@ -414,43 +409,46 @@ img {
     color: var(--main-title-color);
     margin: 0% auto;
     margin-bottom: 72px;
-
 }
 
-.customers-item {
-    display: flex;
-    gap: 24px;
-}
-
-.customers-link {
-    border-radius: 4px;
-    /* width: 168px;
-    height: 88px; */
-    /* border: 1px solid #8E8F99; */
+.customers-list {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* fill: #8E8F99; */
+    gap: 24px;
 }
 
+.customers-item {
+    width: 168px;
+    height: 88px;
+}
+
+
+.customers-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    color: #8E8F99;
+    border: 1px solid #8E8F99;
+    /* padding: 16px 32px; */
+}
 
 .customers-icon {
     width: 104px;
     height: 56px;
-    fill: red;
+    fill: #8E8F99;
 }
 
-.customers-icon:hover {
-    color fill: var(--main-buttons-focuse-color);
+.customers-link:hover:is(:hover, :focus) {
+    color: #404BBF;
+    border-color: #404BBF;
 }
 
-
-.customers-link:focus {
-    border-color: var(--main-buttons-focuse-color);
-}
-
-.customers-link:hover {
-    border-color: var(--main-buttons-focuse-color);
+.customers-link:hover:is(:hover, :focus) .customers-icon {
+    fill: var(--main-buttons-focuse-color);
 }
 
 /* -----------Footer section------------ */
@@ -542,12 +540,14 @@ img {
     background-color: #F4F4FD;
     border-color: #E7E9FC;
     border: 1px solid #E7E9FC;
+    cursor: pointer;
 }
 
 .buttons:focus,
 .buttons:hover {
     background-color: var(--main-buttons-focuse-color);
     border-color: var(--main-buttons-focuse-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .buttons-text {
@@ -627,4 +627,9 @@ img {
 
 .presentation-link {
     text-decoration: none;
+}
+
+.presentation-item:hover,
+.presentation-item:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
