--- a/css/styles.css
+++ b/css/styles.css
@@ -195,10 +195,10 @@ img {
     height: 56px;
 }
 
-.hero-link {
+/* .hero-link {
     text-decoration: none;
     outline: none;
-}
+} */
 
 .hero-button {
     background-color: var(--main-butons-color);
@@ -212,6 +212,7 @@ img {
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     padding: 0%;
+    cursor: pointer;
 
 }
 
